fix the bug of overlapping between description and participants on movie view by setting min-height instead of height.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -765,6 +765,6 @@ ul.brief-info {
 }
 
 .challenge-list .challenge p.description {
-  height: 80px;
+  min-height: 80px;
 }
 /* ends screen.css */
